--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,11 @@
    License: none (public domain)
 */
 
+@font-face {
+	font-family: 'Collegia';
+	src: url('assets/fonts/COLLEGIA.ttf');
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -34,4 +39,8 @@ body {
 }
 ol, ul {
 	list-style: none;
+}
+h1 {
+	font-family: 'Collegia';
+	font-size: 1.5rem;
 }
