--- a/src/styles.css
+++ b/src/styles.css
@@ -44,3 +44,10 @@ h1 {
 	font-family: 'Collegia';
 	font-size: 1.5rem;
 }
+h2, h3 {
+	font-family: 'Collegia';
+	font-size: 1.2rem;
+}
+p {
+	font-family: var(--font-family);
+}
