Set footer to the bottom

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<header></header>
-<home></home>
-<footer></footer>
+<div class="wrapper">
+  <header></header>
+  <home></home>
+  <footer></footer>
+</div>
