--- a/src/app/core/footer/footer.component.css
+++ b/src/app/core/footer/footer.component.css
@@ -2,6 +2,10 @@
   background-color: var(--bs-dark);
   color:  var(--bs-light);
   border-top: 1px solid ;
+  width: 100%;
+  clear: both;
+  position: absolute;
+  margin-top: -200px;
 }
 a {
   color: var(--primary-color);
