--- a/src/app/github/pages/home/home.component.html
+++ b/src/app/github/pages/home/home.component.html
@@ -16,14 +16,15 @@
         </svg>
         <p>{{branches.length}} branches</p>
       </div>
-      <!-- <div class="d-flex ms-3 align-items-center">
-      <svg height="16" width="16" class="icon me-2">
-        <path fill-rule="evenodd"
-          d="M2.5 7.775V2.75a.25.25 0 01.25-.25h5.025a.25.25 0 01.177.073l6.25 6.25a.25.25 0 010 .354l-5.025 5.025a.25.25 0 01-.354 0l-6.25-6.25a.25.25 0 01-.073-.177zm-1.5 0V2.75C1 1.784 1.784 1 2.75 1h5.025c.464 0 .91.184 1.238.513l6.25 6.25a1.75 1.75 0 010 2.474l-5.026 5.026a1.75 1.75 0 01-2.474 0l-6.25-6.25A1.75 1.75 0 011 7.775zM6 5a1 1 0 100 2 1 1 0 000-2z">
-        </path>
-      </svg>
-      <p>tags</p>
-    </div> -->
+
+      <div class="d-flex ms-3 align-items-center">
+        <svg height="16" width="16" class="icon me-2">
+          <path fill-rule="evenodd"
+            d="M1.643 3.143L.427 1.927A.25.25 0 000 2.104V5.75c0 .138.112.25.25.25h3.646a.25.25 0 00.177-.427L2.715 4.215a6.5 6.5 0 11-1.18 4.458.75.75 0 10-1.493.154 8.001 8.001 0 101.6-5.684zM7.75 4a.75.75 0 01.75.75v2.992l2.028.812a.75.75 0 01-.557 1.392l-2.5-1A.75.75 0 017 8.25v-3.5A.75.75 0 017.75 4z">
+          </path>
+        </svg>
+        <p>{{(commits.length)}} commits</p>
+      </div>
     </div>
 
   </div>
