--- a/src/app/github/pages/home/home.component.html
+++ b/src/app/github/pages/home/home.component.html
@@ -1,4 +1,18 @@
 <div class="main">
+
+  <!-- USER SECTION -->
+  <div class="px-5 py-4">
+    <div class="w-75 text-center d-flex justify-content-center mx-auto">
+      <p>Welcome to HubsCommits, here you can see all the commits of your public repositories in the same way that you can see wiht this project. It's really easy! you just have to do two simple things:
+      </p>
+    </div>
+    <div class="w-75 mx-auto mt-3">
+      <p>1. Add the name of your Github user in the User Field.</p>
+      <p class="mt-2">2. Add the name of the repo that you wanna check in the Repository field.</p>
+    </div>
+  </div>
+  <!-- END USER SECTION -->
+
   <!-- BRANCH SECTION -->
   <div class="px-5 py-4">
 
