Add submit button

--- a/src/app/github/pages/home/home.component.html
+++ b/src/app/github/pages/home/home.component.html
@@ -20,6 +20,9 @@
         <label for="repository">Repository</label>
         <input class="mt-1" id="repository" type="text" pInputText/>
       </div>
+      <div class="d-flex  align-items-end">
+        <p-button type="submit" label="Search"></p-button>
+      </div>
     </div>
   </div>
   <!-- END USER SECTION -->
