--- a/src/app/github/pages/home/home.component.css
+++ b/src/app/github/pages/home/home.component.css
@@ -1,9 +1,11 @@
 .icon {
   fill: currentColor;
 }
+
 .author {
   font-weight: 600;
 }
+
 .main {
   min-height: calc(100vh - 67px - 84px - 48px);
 }
@@ -11,6 +13,14 @@
 input {
   height: 34px;
 }
+
 label, span {
   font-weight: 600;
+}
+
+form > div {
+  border: 1px solid var(--bs-gray);
+  border-radius: 15px;
+  background-color: var(--gray-50);
+  box-shadow: rgb(0 0 0 / 35%) 0px 1px 5px
 }
