Add header in coreService and add welcome message

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,7 +9,8 @@
       <h1>Hubs Commits</h1>
     </div>
   </div>
-  <div *ngIf="$userData | async as userData">
+  <div *ngIf="$userData | async as userData" class="d-flex align-items-center">
+    <p class="me-3">Welcome {{userData.login}}</p>
     <p-avatar [image]="userData.avatar_url" styleClass="p-mr-2" shape="circle"></p-avatar>
   </div>
 </div>
